add title and subtitle

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com" >
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
@@ -14,17 +17,27 @@
     <title>Portifólio - Igor Amaro</title>
   </head>
   <body>
-    <header id="cabecalho">
+    <header id="header">
       <figure>
         <img class="logo-img" src="./assets/img/logo.png" alt="logo imagem " >
       </figure>
-      <nav class="menu-cabecalho">
+      <nav class="menu-header">
         <a lang="en" href="#"><span></span>Skills</a>
         <a href="#"><span></span>Projetos</a>
         <a href="#"><span></span>Sobre</a>
         <a href="#"><span></span>Contatos</a>
-        <a id="button" lang="en" href="#">Download CV</a>
+        <a class="button" lang="en" href="#">Download CV</a>
       </nav>
     </header>
+    <main>
+      <div id="main-container">
+        <h1 id="name-main">Igor Amaro</h1>
+        <h2>Front-end Developer</h2>
+      </div>
+      <div>
+        <a class="button">Download CV</a>
+        <a class="button ">Contatos</a>
+      </div>
+    </main>
   </body>
 </html>
