alinhamento box title e botões

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <h2>Front-end Developer</h2>
       </div>
       <div>
-        <a class="button">Download CV</a>
-        <a class="button ">Contatos</a>
+        <a class="button spc">Download CV</a>
+        <a class="button">Contatos</a>
       </div>
     </main>
   </body>
