criada seção de skills e estilização da mesma

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class="logo-img" src="./assets/img/logo.png" alt="logo imagem " >
       </figure>
       <nav class="menu-header">
-        <a lang="en" href="#"><span></span>Skills</a>
+        <a lang="en" href="#skills-container"><span></span>Skills</a>
         <a href="#"><span></span>Projetos</a>
         <a href="#"><span></span>Sobre</a>
         <a href="#"><span></span>Contatos</a>
@@ -30,14 +30,75 @@
       </nav>
     </header>
     <main>
-      <div id="main-container">
-        <h1 id="name-main">Igor Amaro</h1>
-        <h2>Front-end Developer</h2>
-      </div>
-      <div>
-        <a class="button spc">Download CV</a>
-        <a class="button">Contatos</a>
-      </div>
+      <section id=info-container>
+        <div id="main-container">
+          <h1 id="name-main">Igor Amaro</h1>
+          <h2>Front-end Developer</h2>
+        </div>
+        <div>
+          <a class="button spc">Download CV</a>
+          <a class="button">Contatos</a>
+        </div>
+      </section>
+      <section id="skills-container">
+        <h3 id="skills-title">Skills</h3>
+        <section class="skills">
+          <div class="skills-list">
+            <div class="item">
+              <figure>   
+                <img class="skill-logo" src="./assets/img/ico_html5.png">
+              </figure>
+              <div class="info">
+                <h3 class="skill">HTML</h3>
+                <span class="bar"></span>
+              </div>
+            </div>
+          </div>
+          <div class="skills-list"></div>
+        </section>
+        <section class="skills">
+          <div class="skills-list">
+            <div class="item">
+              <figure>   
+                <img class="skill-logo" src="./assets/img/ico_css3.png">
+              </figure>
+              <div class="info">
+                <h3 class="skill">CSS</h3>
+                <span class="bar"></span>
+              </div>
+            </div>
+          </div>
+          <div class="skills-list"></div>
+        </section>
+        <section class="skills">
+          <div class="skills-list">
+            <div class="item">
+              <figure>   
+                <img class="skill-logo" src="./assets/img/ico_js.png">
+              </figure>
+              <div class="info">
+                <h3 class="skill">JavaScript</h3>
+                <span class="bar"></span>
+              </div>
+            </div>
+          </div>
+          <div class="skills-list"></div>
+        </section>
+        <section class="skills">
+          <div class="skills-list">
+            <div class="item">
+              <figure>   
+                <img class="skill-logo" src="./assets/img/ico_react.png">
+              </figure>
+              <div class="info">
+                <h3 class="skill">React</h3>
+                <span class="bar"></span>
+              </div>
+            </div>
+          </div>
+          <div class="skills-list"></div>
+        </section>
+      </section>
     </main>
   </body>
 </html>
