--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" >
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css" >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
-    <link 
+    <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
-    >
-    <link rel="stylesheet" href="./css/reset.css" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio - Igor Amaro</title>
   </head>
   <body>
     <header id="header">
       <figure>
-        <img class="logo-img" src="./assets/img/logo.png" alt="logo imagem " >
+        <img class="logo-img" src="./assets/img/logo.png" alt="logo imagem " />
       </figure>
       <nav class="menu-header">
-        <a lang="en" href="#skills-container"><span></span>Skills</a>
-        <a href="#"><span></span>Projetos</a>
-        <a href="#"><span></span>Sobre</a>
-        <a href="#"><span></span>Contatos</a>
+        <a class="menu-nav" lang="en" href="#skills-container"><span></span>Skills</a>
+        <a class="menu-nav" href="#"><span></span>Projetos</a>
+        <a class="menu-nav" href="#"><span></span>Sobre</a>
+        <a class="menu-nav" href="#"><span></span>Contatos</a>
         <a class="button" lang="en" href="#">Download CV</a>
       </nav>
     </header>
     <main>
-      <section id=info-container>
+      <section id="info-container">
         <div id="main-container">
           <h1 id="name-main">Igor Amaro</h1>
           <h2>Front-end Developer</h2>
@@ -45,12 +48,12 @@
         <section class="skills">
           <div class="skills-list">
             <div class="item">
-              <figure>   
-                <img class="skill-logo" src="./assets/img/ico_html5.png">
+              <figure>
+                <img class="skill-logo" src="./assets/img/ico_html5.png" />
               </figure>
               <div class="info">
                 <h3 class="skill">HTML</h3>
-                <span class="bar"></span>
+                <progress class="bar" max="100" value="70">70%</progress>
               </div>
             </div>
           </div>
@@ -59,12 +62,12 @@
         <section class="skills">
           <div class="skills-list">
             <div class="item">
-              <figure>   
-                <img class="skill-logo" src="./assets/img/ico_css3.png">
+              <figure>
+                <img class="skill-logo" src="./assets/img/ico_css3.png" />
               </figure>
               <div class="info">
                 <h3 class="skill">CSS</h3>
-                <span class="bar"></span>
+                <progress class="bar" max="100" value="70">70%</progress>
               </div>
             </div>
           </div>
@@ -73,12 +76,12 @@
         <section class="skills">
           <div class="skills-list">
             <div class="item">
-              <figure>   
-                <img class="skill-logo" src="./assets/img/ico_js.png">
+              <figure>
+                <img class="skill-logo" src="./assets/img/ico_js.png" />
               </figure>
               <div class="info">
                 <h3 class="skill">JavaScript</h3>
-                <span class="bar"></span>
+                <progress class="bar" max="100" value="40">40%</progress>
               </div>
             </div>
           </div>
@@ -87,16 +90,15 @@
         <section class="skills">
           <div class="skills-list">
             <div class="item">
-              <figure>   
-                <img class="skill-logo" src="./assets/img/ico_react.png">
+              <figure>
+                <img class="skill-logo" src="./assets/img/ico_react.png" />
               </figure>
               <div class="info">
                 <h3 class="skill">React</h3>
-                <span class="bar"></span>
+                <progress class="bar"  max="100" value="30">30%</progress>
               </div>
             </div>
           </div>
-          <div class="skills-list"></div>
         </section>
       </section>
     </main>
