adicionado aba de projetos juntamente com a adição de um projeto

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <img class="logo-img" src="./assets/img/logo.png" alt="logo imagem " />
       </figure>
       <nav class="menu-header">
-        <a class="menu-nav" lang="en" href="#skills-container"><span></span>Skills</a>
-        <a class="menu-nav" href="#"><span></span>Projetos</a>
-        <a class="menu-nav" href="#"><span></span>Sobre</a>
-        <a class="menu-nav" href="#"><span></span>Contatos</a>
+        <a class="menu-nav" lang="en" href="#skills-container">Skills</a>
+        <a class="menu-nav" href="#projetos-container">Projetos</a>
+        <a class="menu-nav" href="#">Sobre</a>
+        <a class="menu-nav" href="#">Contatos</a>
         <a class="button" lang="en" href="#">Download CV</a>
       </nav>
     </header>
@@ -44,7 +44,7 @@
         </div>
       </section>
       <section id="skills-container">
-        <h3 id="skills-title">Skills</h3>
+        <h3 class="titles-h3">Skills</h3>
         <section class="skills">
           <div class="skills-list">
             <div class="item">
@@ -95,11 +95,17 @@
               </figure>
               <div class="info">
                 <h3 class="skill">React</h3>
-                <progress class="bar"  max="100" value="30">30%</progress>
+                <progress class="bar" max="100" value="30">30%</progress>
               </div>
             </div>
           </div>
         </section>
+      </section>
+      <section id="projetos-container">
+        <h3 class="titles-h3">Projetos</h3>
+        <div id="projeto-lol">
+          <a target="_blank" href="https://igor-amg.github.io/LoL-Projeto/"><img class="lol" src="./assets/img/Design sem nome.png"></a>
+        </div>
       </section>
     </main>
   </body>
