mudança no header do portifolio

--- a/index.html
+++ b/index.html
@@ -20,28 +20,16 @@
     <title>Portifólio - Igor Amaro</title>
   </head>
   <body>
-    <header id="header">
-      <figure>
-        <img class="logo-img" src="./assets/img/logo.png" alt="logo imagem " />
-      </figure>
-      <nav class="menu-header">
-        <a class="menu-nav" lang="en" href="#skills-container">Skills</a>
-        <a class="menu-nav" href="#projetos-container">Projetos</a>
-        <a class="menu-nav" href="#">Sobre</a>
-        <a class="menu-nav" href="#">Contatos</a>
-        <a class="button" lang="en" href="#">Download CV</a>
-      </nav>
-    </header>
     <main>
       <section id="info-container">
         <div id="main-container">
           <h1 id="name-main">Igor Amaro</h1>
           <h2>Front-end Developer</h2>
         </div>
-        <div>
-          <a class="button spc">Download CV</a>
-          <a class="button">Contatos</a>
-        </div>
+        <!-- <nav id="nav-header">
+          <a class="button spc">Skills</a>
+          <a href="#projetos-container" class="button">Projetos</a>
+        </nav> -->
       </section>
       <section id="skills-container">
         <h3 class="titles-h3">Skills</h3>
